# rules_hugo

./: .cirrus.yml  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  TODO.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  temp_table.md
.github/workflows/: ci.yml
.pnpm-store/v3/files/00/: aa5a6251e7f2de1255b3870b2f9be7e28a82f478bebb03f2f6efadb890269b3b7ca0d3923903af2ea38b4ad42630b49336cd78f2f0cf1abc8b2a68e35a9e58-index.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6faf7cc1def64b7b279dd6c0bd8676dc39cf7f4ab33233944f42b906cf8692f59a3-index.json  f30111a9e3c9b68fcd4adfa94d08314e48d00b3028c1fb93c3932ecd2fbd5e0a669131913918f3b9d1ff3a5bb933e3fa0011a29eda1946e5d75a670df5bac6-index.json
.pnpm-store/v3/files/02/: 6a264888cff196df19086e9a436f802df7018eeab4c0979cde9b2f6bb626ce2054283c7e9ef7e5a12231205b0d1ed44088fdd27e3028015448477440dd9492-index.json  b6e7c80dd4e52187a2412f91f5a35be3bc84ec55d51489c4e82b897ff7038c5946a8b1b7d6451c3d323e0650174e508f4a00aa2f07ffbb2d0e8ae3a0763dd1-index.json
.pnpm-store/v3/files/03/: 9094a6dc43b2fc4a244537c8ee83b96052273fea8b3ab324a38c21f5091c44db070fec15a0f181de9fc66d5ec1468cd23678e3815ce6f0b944e62eae0ff83f-index.json
.pnpm-store/v3/files/04/: b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676d782b303fb28fbae15b492e103c7325a6171a3116e6881aa4a34c10a34c8e26c-index.json  ddb607979a30c23d50cb63ac677983978260fa423c3532d052576d8b1a4f9cd8c6314e7244b9dd2403137a56915a16a475d56f706b61c10de13c1ae7907970-index.json
.pnpm-store/v3/files/05/: 278d9f2bacef90b8fff350f6042dd7f72c4d7ca8ffc49bf9a7cb024cc0a6d16e32ca1df4716890636e759a62fe8415ef786754afac47ee4f55131df83afb61-index.json
.pnpm-store/v3/files/06/: add2992a721476968cf93c21ff7273ab2f33c739e9d079040b56e106f0e631d3c305d77132e844c9290c9a7a54bd17ce559a0874d7ae415444c6260f4b0baa-index.json
.pnpm-store/v3/files/07/: f801b8d8394a2313acf902f80dbe716d11b33c316269fa558c41fe29e5052b52e67c7ac4722dfde84a46120c86abac97b6bc2e34286678c2b39be1c31390d6-index.json
.pnpm-store/v3/files/08/: 06e7afa473e0261090b614b52357c503d41f680af1fde259ec5596c9cc783f868e5b10d17b32d5c397fa637776dc58a26472db50a23b353c521c3a3b09dc11-index.json  4ca979eca43bd00dec95a4af53843906f41d1cd994f586c15d186ba0ee56015d0e2ea0de66bf70f67964f64ce005908a40e9abfd259671869482fe8fc69fcf-index.json
.pnpm-store/v3/files/0b/: 931ceab767b1a2438cedd4a465bf0904c7b4229a62549c653972e0922ef7b271a3fa1d0a21f42139c35d224f4ceac42a4ff271267400e8139a40ed90eb2f20-index.json
.pnpm-store/v3/files/0c/: 25eee887e1a9c92ced364a6371f1a77cbaaa9858e522599ab58c0eb29c11148e5d641d32153d220fcf62bcf2c3fba5f63388ca1d0de0cd2d6c2e61a1d83c77-index.json
.pnpm-store/v3/files/0d/: 7f272a0a9c1b0b1cd1e252a98b799703f80c7e459479e6b96581472ed7d0d71a191d19b6ec9e11280cc1361512dc66b0d198faa8ade10613fcc2184ce4cf78-index.json  a0de5245d92a374686061a1cd25357da55ed8f41ddbeb8e2308bb3d52973755e34683a2d6011013e8ef90fbf08ea3eda083f6cce6b869300b5fef45aa7c175-index.json  f5cdf037e127b347dce7bb7059aedcd0aed7029b911789f13a2bcd20056d22ab94d69048a7c8cea62a558f3395bb3634b05b5a9462539d865f63db68154d92-index.json
.pnpm-store/v3/files/0f/: 214fdc133fdd81d340e0942ffc343991d1d25a4a786af1a2d70759ca8d11d9e5b6a1705d57e110143de1e228df801f429a34ac6922e1cc8889fb58d3a87616-index.json  ece439109b03d7f5b5d5912b445a091dc63efe7470cc5caf3e17f24e4b4d2503d43930e3b98a24465036e9c8b514e45b082d6944a8d515454481bd65788562-index.json
docs/: ARCHITECTURE_REVIEW.md  BAZEL_9_COMPATIBILITY.md  DOWNSTREAM_INTEGRATION.md  ENHANCED_SERVE.md  FUNCTIONAL_VALIDATION.md  IMPROVEMENTS_SUMMARY.md
docs/tasks/: accessibility-checker.md  brotli.md  bzlmod_migration.md  critical-css.md  html-validation.md  image-optimization.md  link-checker.md  minification.md  performance-budgets.md
examples/enhanced_serve/: BUILD.bazel
hugo/: BUILD  rules.bzl
hugo/internal/: BUILD.bazel  extensions.bzl  github_hugo_theme.bzl  hugo_repository.bzl  hugo_site.bzl  hugo_site_autoprefixer.bzl  hugo_site_brotli.bzl  hugo_site_critical_css.bzl  hugo_site_cssnano.bzl  hugo_site_files.bzl  hugo_site_gzip.bzl  hugo_site_info.bzl  hugo_site_link_checker.bzl  hugo_site_minify.bzl  hugo_site_minify.sh  hugo_site_optimize_images.bzl  hugo_site_postcss.bzl  hugo_site_prerender.bzl  hugo_site_purgecss.bzl  hugo_site_stylelint.bzl  hugo_theme.bzl
hugo/internal/tools/link_checker/: BUILD.bazel  PRODUCTION.md  check.py  check_test.py  requirements.txt  requirements_lock.txt
site_complex/: BUILD
site_complex/config/_default/: config.yaml  languages.yaml  params.yaml
site_complex/data/menu/: main.yaml
site_simple/: .stylelintrc.json  BUILD.bazel
site_simple/content/docs/: bazel.md  chrystl.md  proto.md
test_functional/: BUILD.bazel  test_config.yaml
test_integration/: BUILD.bazel
test_integration/autoprefixer/: BUILD.bazel  config.yaml  test_autoprefixer.sh
test_integration/autoprefixer/static/: test.css
test_integration/brotli/: BUILD.bazel  config.yaml  test_brotli.sh
test_integration/brotli/content/: _index.md
test_integration/brotli/static/: test.css  test.js
test_integration/critical_css/: BUILD.bazel  config.yaml  test_critical_css.sh
test_integration/critical_css/content/: _index.md
test_integration/critical_css/static/: index.html
test_integration/critical_css/static/css/: styles.css
test_integration/link_checker/: BUILD.bazel  config.yaml  test_link_checker.sh  test_link_checker_rule.sh
test_integration/link_checker/content/: _index.md  broken-page.md  valid-page.md
test_integration/link_checker/static/: .placeholder  broken-page.html  index.html  valid-page.html
test_integration/minify/: BUILD.bazel  config.yaml  test_minify.sh
test_integration/minify/content/: _index.md
test_integration/minify/static/: app.js  style.css
test_integration/optimize_images/: BUILD.bazel  config.yaml  test_optimize_images.sh
test_integration/optimize_images/content/: _index.md
test_integration/purgecss/: BUILD.bazel  config.yaml  test_purgecss.sh
test_integration/purgecss/content/: _index.md
test_integration/purgecss/static/: test.css
test_serve/: BUILD.bazel  test_config.yaml
(+507 files in other folders)
