module(name = "build_stack_rules_hugo")

# Common Bazel utilities
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Dependencies for image optimization
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

# Dependencies for critical CSS extraction (Node.js + npm)
bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "rules_nodejs", version = "6.3.2")

hugo = use_extension(
    "@@build_stack_rules_hugo//hugo/internal:extensions.bzl",
    "hugo_extension",
)

hugo.hugo(
    name = "hugo",
    version = "0.145.0",
    extended = True,
)

hugo.github_theme(
    name = "com_github_alex_shpak_hugo_book",
    owner = "alex-shpak",
    repo = "hugo-book",
    commit = "07048f7bf5097435a05c1e8b77241b0e478023c2",
    sha256 = "2897befb721e2bde54bb8acb43887d84c2855956f8efad5bd761628fe7fe5339",
)

hugo.http_theme(
    name = "com_github_thegeeklab_hugo_geekdoc",
    url = "https://github.com/thegeeklab/hugo-geekdoc/releases/download/v0.34.2/hugo-geekdoc.tar.gz",
    sha256 = "7fdd57f7d4450325a778629021c0fff5531dc8475de6c4ec70ab07e9484d400e",
    build_file_content = """filegroup(name = "files", srcs = glob(["**"]), visibility = ["//visibility:public"])""",
)

use_repo(
    hugo,
    "hugo",
    "com_github_alex_shpak_hugo_book",
    "com_github_thegeeklab_hugo_geekdoc",
)

# Image optimization tools
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pre-built libwebp binaries for Linux x64
http_archive(
    name = "libwebp",
    urls = ["https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-1.3.2-linux-x86-64.tar.gz"],
    sha256 = "71e8920e05bb2e62c47e6b2a7431007b80780b652e00952bcdcda32bf011c11c",
    strip_prefix = "libwebp-1.3.2-linux-x86-64",
    build_file_content = """
exports_files(
    ["bin/cwebp", "bin/dwebp"],
    visibility = ["//visibility:public"],
)
""",
)

# TODO: Add pre-built libavif binaries when AVIF support is implemented
# For now, AVIF generation is disabled by default

# Node.js toolchain for critical CSS extraction
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.0")

# npm dependencies for critical CSS
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
