module(name = "build_stack_rules_hugo")

# Common Bazel utilities
bazel_dep(name = "bazel_skylib", version = "1.7.1", repo_name = "bazel_skylib")
bazel_dep(name = "platforms", version = "0.0.10")

# Dependencies for image optimization
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

# Dependencies for critical CSS extraction (Node.js + npm)
bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "rules_nodejs", version = "6.3.2")

hugo = use_extension(
    "@@build_stack_rules_hugo//hugo/internal:extensions.bzl",
    "hugo_extension",
)

hugo.hugo(
    name = "hugo",
    version = "0.146.0",
    extended = True,
)

hugo.github_theme(
    name = "com_github_alex_shpak_hugo_book",
    owner = "alex-shpak",
    repo = "hugo-book",
    commit = "cec082b8dd9b31d0c52b2de95d86ced9909cc7ec",
    sha256 = "71b6885054d0b11562fc8353d31b98ca225915ce9441b6e4909484e7556e2f22",
)

hugo.http_theme(
    name = "com_github_thegeeklab_hugo_geekdoc",
    url = "https://github.com/thegeeklab/hugo-geekdoc/releases/download/v2.0.0/hugo-geekdoc.tar.gz",
    sha256 = "0a3c69818aa36ec4318c0fb67f29b499363ff22aa4f73be32e752a224ecbb395",
    build_file_content = """filegroup(name = "files", srcs = glob(["**"]), visibility = ["//visibility:public"])""",
)

use_repo(
    hugo,
    "hugo",
    "com_github_alex_shpak_hugo_book",
    "com_github_thegeeklab_hugo_geekdoc",
)

# Image optimization tools
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pre-built libwebp binaries for Linux x64
http_archive(
    name = "libwebp",
    urls = ["https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-1.3.2-linux-x86-64.tar.gz"],
    sha256 = "71e8920e05bb2e62c47e6b2a7431007b80780b652e00952bcdcda32bf011c11c",
    strip_prefix = "libwebp-1.3.2-linux-x86-64",
    build_file_content = """
exports_files(
    ["bin/cwebp", "bin/dwebp"],
    visibility = ["//visibility:public"],
)
""",
)

# TODO: Add pre-built libavif binaries when AVIF support is implemented
# For now, AVIF generation is disabled by default

# Node.js toolchain for critical CSS extraction
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.0")

# npm dependencies for critical CSS
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
