load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "hugo_theme", "hugo_serve", "gzip_hugo_site", "hugo_site_files", "minify_hugo_site", "brotli_hugo_site", "purgecss_hugo_site", "postcss_hugo_site", "autoprefixer_hugo_site", "cssnano_hugo_site", "stylelint_hugo_site", "prerender_hugo_site")

hugo_theme(
    name = "book",
    srcs = [
        "@com_github_alex_shpak_hugo_book//:files",
    ],
)

hugo_site(
    name = "site_simple",
    config = "config.yaml",
    content = glob(["content/**"], allow_empty=True),
    static = glob(["static/**"], allow_empty=True),
    layouts = glob(["layouts/**"], allow_empty=True),
    theme = ":book",
)

hugo_serve(
    name = "site_serve",
    dep = [":site_simple"],
)

sh_test(
    name = "site_test",
    srcs = ["site_test.sh"],
    data = [":site_simple"],
)

# Example: Create gzipped versions of site files for nginx gzip_static
gzip_hugo_site(
    name = "site_simple_gz",
    site = ":site_simple",
    extensions = ["html", "css", "js", "xml", "json"],
    compression_level = 9,
)

# Example: Create brotli-compressed versions of site files for modern browsers
brotli_hugo_site(
    name = "site_simple_br",
    site = ":site_simple",
    extensions = ["html", "css", "js", "xml", "json"],
    compression_quality = 11,
)

# Example: Remove unused CSS classes for smaller bundles
purgecss_hugo_site(
    name = "site_simple_purged",
    site = ":site_simple",
    content_glob = "**/*.html",
    keyframes = True,
    font_face = True,
)

# Example: Lint CSS files for quality and consistency
stylelint_hugo_site(
    name = "site_simple_linted",
    site = ":site_simple",
)

# Example: Add vendor prefixes for browser compatibility
autoprefixer_hugo_site(
    name = "site_simple_prefixed",
    site = ":site_simple",
)

# Example: Advanced CSS minification with CSSnano
cssnano_hugo_site(
    name = "site_simple_cssnano",
    site = ":site_simple",
)

# Example: Complete PostCSS pipeline (lint → prefix → purge → minify)
postcss_hugo_site(
    name = "site_simple_postcss",
    site = ":site_simple",
    plugins = ["autoprefixer", "purgecss", "cssnano"],
)

# Example: Prerender HTML pages for better performance
prerender_hugo_site(
    name = "site_simple_prerendered",
    site = ":site_simple",
    base_url = "https://example.com",
    wait_for_network_idle = True,
    minify = True,
)

# Example: Get file manifest for easier downstream processing
hugo_site_files(
    name = "site_simple_files",
    site = ":site_simple",
)

# Example: Minify HTML/CSS/JS files for production deployment
minify_hugo_site(
    name = "site_simple_minified",
    site = ":site_simple",
    extensions = ["html", "css", "js", "xml", "json"],
)
