# Test that validates enhanced hugo_serve attributes are processed correctly
# This test doesn't require actual Hugo site - just validates the rule processes attributes

# Enhanced hugo_serve test - validates all new attributes
hugo_serve(
    name = "serve_enhanced_attributes_test",
    dep = [],  # Use empty dependency to avoid site generation issues
    draft = True,
    bind = "0.0.0.0",
    port = 1313,
    base_url = "http://localhost:1313",
    navigate_to_changed = True,
    build_drafts = True,
    build_future = True,
    disable_fast_render = False,
    additional_args = ["--minify", "--verbose"],
)

# Test backward compatibility - minimal attributes
hugo_serve(
    name = "serve_minimal_test",
    dep = [],
    quiet = False,
    verbose = True,
)