load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "brotli_hugo_site")

hugo_site(
    name = "test_site",
    config = "config.yaml",
    content = glob(["content/**"]),
    static = glob(["static/**"]),
)

brotli_hugo_site(
    name = "test_site_brotli",
    site = ":test_site",
)

sh_test(
    name = "test_brotli",
    srcs = ["test_brotli.sh"],
    data = [
        ":test_site",
        ":test_site_brotli",
    ],
)
