load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "critical_css_hugo_site")

hugo_site(
    name = "test_site",
    config = "config.yaml",
    content = glob(["content/**"]),
    static = glob(["static/**"]),
)

# NOTE: This requires Node.js 18+ to be installed
# Run 'pnpm install' in the repository root first
critical_css_hugo_site(
    name = "test_site_critical",
    site = ":test_site",
)

sh_test(
    name = "test_critical_css",
    srcs = ["test_critical_css.sh"],
    data = [
        ":test_site",
        ":test_site_critical",
    ],
)
