load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "minify_hugo_site")

hugo_site(
    name = "test_site",
    config = "config.yaml",
    content = glob(["content/**"]),
    static = glob(["static/**"]),
)

minify_hugo_site(
    name = "test_site_minified",
    site = ":test_site",
)

sh_test(
    name = "test_minify",
    srcs = ["test_minify.sh"],
    data = [
        ":test_site",
        ":test_site_minified",
    ],
)
